--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "blockstack-trezor",
   "version": "1.0.0",
-  "description": "Simple utility for ethereum trezor transactions",
+  "description": "Simple utility for Blockstack trezor transactions",
   "main": "index.js",
   "scripts": {
     "build": "rm -rf lib; babel src -d lib",
     "start": "node lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Aaron Blankstein <aaron@blankstein.com>",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "blockstack": "^18.0.2",
+    "cross-fetch": "^2.2.2",
     "trezor.js": "^6.16.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0"
   },
   "engines": {
     "node": ">=9"
