--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bigi": "^1.4.2",
     "blockstack": "^18.0.2",
     "cross-fetch": "^2.2.2",
     "trezor.js": "^6.16.1"
