--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "blockstack-trezor",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Simple utility for Blockstack trezor transactions",
-  "main": "index.js",
   "scripts": {
     "build": "rm -rf lib; babel src -d lib",
     "start": "node lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aaron Blankstein <aaron@blankstein.com>",
+  "author": "Aaron Blankstein <aaron@blockstack.com>",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -23,6 +22,6 @@
     "babel-preset-flow": "^6.23.0"
   },
   "engines": {
-    "node": ">=9"
+    "node": ">=8"
   }
 }
