--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.9.0",
   "description": "Simple utility for Blockstack trezor transactions",
   "scripts": {
-    "build": "rm -rf lib; babel src -d lib && npm run browserify",
-    "browserify": "browserify lib/index.js --standalone bsk-trezor -o lib/distribute.js",
+    "build": "rm -rf lib; babel src -d lib",
+    "browserify": "browserify lib/index.js --standalone bsk-trezor -o dist/blockstack-trezor.js",
     "start": "node lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,8 +15,7 @@
     "bigi": "^1.4.2",
     "blockstack": "^18.0.2",
     "cross-fetch": "^2.2.2",
-    "trezor-connect": "^5.0.33",
-    "trezor.js": "^6.16.1"
+    "trezor-connect": "^5.0.33"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
