--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "blockstack-trezor",
-  "version": "0.9.3",
+  "version": "0.9.7",
   "description": "Simple utility for Blockstack trezor transactions",
+  "main": "lib/index",
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "rm -rf lib; babel src -d lib",
     "browserify": "browserify lib/index.js --standalone bsk-trezor -o dist/blockstack-trezor.js",
     "start": "node lib/index.js",
-    "test": "eslint src/"
+    "flow": "flow",
+    "lint": "eslint src/",
+    "test": "npm run lint && npm run flow"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^4.0.2",
     "blockstack": "^18.0.2",
     "cross-fetch": "^2.2.2",
     "trezor-connect": "^5.0.33"
@@ -37,7 +42,8 @@
     "babel-preset-flow": "^6.23.0",
     "browserify": "^16.2.2",
     "eslint": "^5.6.1",
-    "eslint-plugin-flowtype": "^2.50.3"
+    "eslint-plugin-flowtype": "^2.50.3",
+    "flow-bin": "^0.71.0"
   },
   "engines": {
     "node": ">=8"
