--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Simple utility for Blockstack trezor transactions",
   "main": "lib/index",
   "scripts": {
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run test && npm run build",
     "build": "rm -rf lib; babel src -d lib",
     "browserify": "browserify lib/index.js --standalone bsk-trezor -o dist/blockstack-trezor.js",
-    "start": "node lib/index.js",
+    "build-tests": "rm -rf tests/lib; babel tests/src -d tests/lib && browserify tests/lib/units.js -o tests/dist/units.js",
+    "karma": "npm run test && npm run build && npm run build-tests && karma start --single-run",
     "flow": "flow",
     "lint": "eslint src/",
     "test": "npm run lint && npm run flow"
@@ -33,7 +34,7 @@
     "bitcoinjs-lib": "^4.0.2",
     "blockstack": "^18.0.2",
     "cross-fetch": "^2.2.2",
-    "trezor-connect": "^5.0.33"
+    "trezor-connect": "^5.0.34"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -43,7 +44,12 @@
     "browserify": "^16.2.2",
     "eslint": "^5.6.1",
     "eslint-plugin-flowtype": "^2.50.3",
-    "flow-bin": "^0.71.0"
+    "fetch-mock": "^7.0.7",
+    "flow-bin": "^0.71.0",
+    "jasmine": "^3.2.0",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2"
   },
   "engines": {
     "node": ">=8"
