--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockstack-trezor",
-  "version": "0.9.7",
+  "version": "0.9.8",
   "description": "Simple utility for Blockstack trezor transactions",
   "main": "lib/index",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "rm -rf lib; babel src -d lib",
     "browserify": "browserify lib/index.js --standalone bsk-trezor -o dist/blockstack-trezor.js",
     "build-tests": "rm -rf tests/lib; babel tests/src -d tests/lib && browserify tests/lib/units.js -o tests/dist/units.js",
-    "karma": "npm run test && npm run build && npm run build-tests && karma start --single-run",
+    "karma": "npm run build && npm run build-tests && karma start --single-run",
     "flow": "flow",
     "lint": "eslint src/",
     "test": "npm run lint && npm run flow"
