--- a/.flowconfig
+++ b/.flowconfig
@@ -4,7 +4,8 @@
 .*/node_modules/chalk/*
 .*/node_modules/eslint-plugin-jsx-a11y/*
 .*/node_modules/npm/node_modules/config-chain/*
-<PROJECT_ROOT>/.git/.*
+.*/node_modules/module-deps/.*
+.*/.git/.*
 [include]
 
 [libs]
