--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@trezor/connect-web": "^9.0.0",
+    "@trezor/connect-web": "~9.0.0",
     "babel-polyfill": "^6.26.0",
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^4.0.2",
