--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "karma": "npm run build && npm run build-tests && karma start --single-run",
     "flow": "flow",
     "lint": "eslint src/",
-    "test": "npm run lint && npm run flow",
-    "postinstall": "npm run build"
+    "test": "npm run lint && npm run flow"
   },
   "repository": {
     "type": "git",
